--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Toorrang Atashi"
-  avatar           : "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/WhatsApp Image 2021-10-25 at 14.33.54.jpeg"
   bio              : I'm an assistant professor of Computer Science at IUST. I enjoy learning new things and sharing what I know with others. So far I've learned some science, math, computers, NLP, IT, BJJ, MMA, swimming, diving, flying... 
   location         : "تهران"
   email            : sauleh@gmail.com
