--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "azin hashemabadi"
   avatar           : "/assets/images/bio-photo.jpeg"
-  bio              : I'm an assistant professor of Computer Science at IUST. I enjoy learning new things and sharing what I know with others. So far I've learned some science, math, computers, NLP, IT, BJJ, MMA, swimming, diving, flying... 
+  bio              : I'm a student of Computer Engineering at IUST.
   location         : "تهران"
   email            : ahashemabadi@gmail.com
   twitter:
